apply plugin: 'java-library'

dependencies {
    implementation(
        'org.glassfish.jersey.ext:jersey-proxy-client:2.30.1',
        'javax.xml.bind:jaxb-api:2.3.1',
        'org.glassfish.jaxb:jaxb-runtime:2.3.2',
        'javax.activation:activation:1.1.1',
        'jakarta.servlet:jakarta.servlet-api:4.0.3',
        'org.slf4j:jul-to-slf4j:1.7.30',
        'org.glassfish.grizzly:grizzly-http-servlet:2.4.4',
        project(":common"),
    )

    testCompile    project(path: ":common", configuration: 'testRuntime')

    api(
        'org.glassfish.jersey.inject:jersey-hk2:2.30.1',
        'org.glassfish.jersey.containers:jersey-container-grizzly2-http:2.30.1',
        'org.glassfish.jersey.media:jersey-media-multipart:2.30.1',
        'org.glassfish.grizzly:grizzly-websockets:2.4.4',
        'org.glassfish.grizzly:grizzly-http-client:1.16',
    )
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8
